<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <EditText
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text="@string/mail_label"
            android:ems="10"
            android:id="@+id/loginText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:hint="@string/mail_hint"
            app:layout_constraintHorizontal_bias="0.496" android:layout_marginTop="148dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText" android:layout_marginTop="12dp"
            app:layout_constraintTop_toBottomOf="@+id/loginText"
            app:layout_constraintStart_toStartOf="@+id/loginText" app:layout_constraintEnd_toEndOf="@+id/loginText"
            android:hint="@string/password_label" app:layout_constraintHorizontal_bias="0.0"/>
    <Button
            android:text="@string/submit_label"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:id="@+id/button" app:layout_constraintEnd_toEndOf="@+id/passwordText"
            app:layout_constraintStart_toStartOf="@+id/passwordText"
            android:background="@color/colorPrimary"
            android:layout_marginTop="28dp" app:layout_constraintTop_toBottomOf="@+id/passwordText"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:src="@drawable/book-v19"
            android:layout_width="180dp"
            android:layout_height="81dp"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497"
            android:layout_marginTop="176dp" app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/description_svg_login"
    />
</android.support.constraint.ConstraintLayout>