<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@color/white">
    <ImageView
            android:src="@drawable/book_v19"
            android:layout_width="355dp"
            android:layout_height="192dp"
            android:id="@+id/imageView3"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/description_svg_login"
            android:layout_marginTop="124dp" app:layout_constraintTop_toTopOf="parent"
    />
    <EditText
            android:layout_width="282dp"
            android:layout_height="0dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/loginText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/mail_label"
            android:layout_marginTop="48dp" app:layout_constraintTop_toBottomOf="@+id/imageView3"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/passwordText"
            app:layout_constraintStart_toStartOf="@+id/loginText"
            android:hint="@string/password_label" app:layout_constraintEnd_toEndOf="@+id/loginText"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/loginText"/>

    <Button
            android:text="@string/submit_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/button" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/passwordText" app:layout_constraintEnd_toEndOf="@+id/passwordText"
            app:layout_constraintStart_toStartOf="@+id/passwordText"
            android:background="@color/colorPrimary" android:textColor="@color/white"/>
</android.support.constraint.ConstraintLayout>